# CareAgent

./: .env.example  .gitignore  Dockerfile  Makefile  PROD_DEPLOY.md  README.md  deploy.sh  docker-compose.yml  git-autosave.sh  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
config/: projects.json  settings.yaml
config/projects/: mt.yaml  sk.yaml  ss.yaml
config/rules/: cascade_rules.yaml
docs/: API.md  ARCHITECTURE.md  DEPENDENCIES.md  DEPLOYMENT.md  GAS_CI_SECRETS.md  MIGRATION.md  MODULES.md  PROJECT_SPECIFICS.md  SHEETS_REFERENCE.md
docs/google_apps_script/: Client.gs  Menu.gs
gas/: 00_GlobalApiBridge.js  01Config.js  02AutoPrice.js  02Загрузка остатков.js  02Обработка бл.зак Mt.js  02Обработка бл.зак Sk.js  02Обработка бл.зак Ss.js  03Синхронизация.js  04Инвойс.js  06OrderForm.js  07AvtoZakaz.js  08StatusManager.js  11Выгрузка акции и наборы.js  12MTPriceManager.js  12SKPriceManager.js  Client.gs  ExternalDocsManager.html  Menu.gs  RuleEditor.html  appsscript.json  z-server-overrides.js  z-мост.js  Инструкция_SK-SS-MT_Процессы_v1.docx
gas/Automation/: 01GeminiAPI.js  02SheetsIntegration.js  03SetupGemini.js  09AgentIntegration.js
scripts/: create_pr_with_token.sh  deploy_all.sh  patch_config.sh  setup_gas_local.sh
src/: __init__.py  main.py
src/api/: __init__.py  endpoints.py  router.py  webhooks.py
src/core/: __init__.py
src/integrations/: __init__.py
src/parsers/: __init__.py
src/services/: sheets.py  sorting.py  sync.py
src/utils/: __init__.py  config.py  logger.py
