[tool.poetry]
name = "agentcare"
version = "0.1.0"
description = "Google Sheets automation with AI - replacement for MyGoogleScripts"
authors = ["Your Name <your@email.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# Web Framework
fastapi = "^0.109"
uvicorn = {extras = ["standard"], version = "^0.27"}
pydantic = "^2.5"
pydantic-settings = "^2.1"
python-multipart = "^0.0.6"

# Google APIs
gspread = "^6.0"
google-auth = "^2.27"
google-api-python-client = "^2.116"
google-generativeai = "^0.4"

# Data Processing
pandas = "^2.2"
openpyxl = "^3.1"

# Async & Cache
aiohttp = "^3.9"
redis = "^5.0"

# Config & Logging
pyyaml = "^6.0"
python-dotenv = "^1.0"
structlog = "^24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^4.1"
ruff = "^0.2"
black = "^24.1"
mypy = "^1.8"

[tool.poetry.group.optional.dependencies]
celery = "^5.3"
python-telegram-bot = "^21.0"
sentry-sdk = "^1.40"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
